[tool.poetry]
name = "repl_nix_username-checker-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
getch = "^1.0"
requests = "^2.28.1"
py-getch = "^1.0.1"
selenium = "^4.4.0"
undetected-chromedriver = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
